# themachine-corp

./: .gitignore  .wranglerignore  AGENTS.md  AGENT_EVOLUTION.md  AI_AGENT_RESEARCH.md  ALEX_FINN_ANALYSIS.md  CEO_RULE.md  COMPANY_OPERATION.md  HEARTBEAT.md  MARKET_RESEARCH.md  MEMORY.md  MULTI_AGENT.md  PRODUCTHUNT.md  PROJECTS.md  SOLOPRENEUR_ANALYSIS.md  SOUL.md  SOUL.md.bak  THEMATHINK-CSS-STANDARD.css  THE_MACHINE_创富方案报告.md  WORKFLOW.md  about.html  agents-config.yaml  ai-agent-basic.html  ai-agent-flagship.html  ai-agent-pro.html  ai-agent-side-hustle-guide.html  algora-claim-workflow.skill  algora-scan.js  bot.pid  check-coolify-payout.sh  check-payout.sh  check_pr.mjs  crown-static.html  crown-v3-preview.html  daily-fortune.md  demand-miner.js  deploy-trigger.txt  global.css  gumroad-publish.skill  index.html.bak  (+51 more)
.clawhub/: lock.json
.github/: README.md
.openclaw/: workspace-state.json
.vercel/: project.json
agent-browser/: SKILL.md  agent-browser
agents/: SPEC.md  builder.md  cfo.md  cmo.md  cpo.md  cto.md  dev.md  researcher.md  sec.md
ai-generator/: .gitignore  api.py  index.html  proxy.py  server.js
api-server/: index.js
api-tester/: SKILL.md  api-tester
config/: openclaw.json
context/: kevin-state.json  mike-state.json
crown/: .env.local.example  .env.production.local  .gitignore  _middleware.ts  deploy.sh  index.html  next.config.js  next.config.ts  next.config.ts.bak  package-lock.json  package.json  wrangler.toml
csv-tools/: SKILL.md
skills/global/meta_skills_4erctua4/: Cargo.toml  LICENSE  README.md  SKILL.md  antigravity.py  install.sh  lib.rs  main.rs  openclaw_skill.py  package.json  physics.rs  pyproject.toml  renderer.rs  scraper.rs  scraper_py.py  types.rs
skills/global/meta_skills_4erctua4/scripts/: build.js  setup.js
skills/global/meta_skills_4erctua4/src/: client.js  index.js  server.py
skills/global/meta_skills_4erctua4/tests/: test_client.mjs  test_server.py
skills/global/tvclaw/: LICENSE  README.md  SKILL.md  account.py  broker_client.py  charts.py  indicators.py  install.sh  llm_client.py  package.json  position_storage.py  positions.py  pyproject.toml  signal_engine.py  signals.py  trade.py  tv_client.py  tvclaw.py
skills/global/tvclaw/scripts/: build.js  setup.js
skills/global/tvclaw/src/: index.js
(+467 files in other folders)
