[package]
name = "antigravity-engine"
version = "1.0.0"
edition = "2021"
description = "Antigravity Claw — Rust physics engine for Google gravity simulation"

[[bin]]
name = "antigravity"
path = "src/main.rs"

[lib]
name = "antigravity_engine"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
tokio          = { version = "1",    features = ["full"] }
reqwest        = { version = "0.11", features = ["json", "rustls-tls"] }
serde          = { version = "1",    features = ["derive"] }
serde_json     = "1"
clap           = { version = "4",    features = ["derive"] }
anyhow         = "1"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored        = "2"
rand           = "0.8"
crossterm      = "0.27"
indicatif      = "0.17"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
