[project]
name = "tradingview-claw"
version = "1.0.0"
description = "Trading-enabled TradingView skill for OpenClaw"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    "httpx>=0.27.0",
    "websockets>=12.0",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "pandas-ta>=0.3.14b",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
